perubahan responsive di login
bagian login

--- a/style.css
+++ b/style.css
@@ -1214,7 +1214,44 @@ iframe {
         width: 30%;
     }
 }
+@media only screen and (max-width: 480px) {
+    .header-content {
+        flex-direction: column;
+        align-items: center;
+    }
 
+    .left-section {
+        margin: 0;
+    }
+
+    .navbar-phone {
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+    }
+
+    .navbar-phone a {
+        padding: 5px;
+        margin: 0 5px;
+        font-size: 13px;
+    }
+
+    .sign-in-button {
+        margin: 10px 0;
+    }
+
+    .category-menu {
+        margin-top: 10px;
+    }
+
+    .menu-icon {
+        margin: 0;
+    }
+
+    .dropdown-content {
+        margin-top: 0;
+    }
+}
 /*responsif untuk footer*/
     @media (max-width: 768px) {
         .footer-column {
@@ -1524,96 +1561,34 @@ iframe {
 }
 
  /*responsive untuk login*/
- @media (max-width: 768px) {
-    .login {
-        width: 80%;
-        height: auto;
-        padding: 30px;
-    }
-
-    .login .avatar {
-        width: 60px;
-        height: 60px;
-        top: -10%;
-        left: calc(50% - 30px);
-    }
-
-    .login h1 {
-        font-size: 18px;
-    }
-
-    .login input {
-        margin-bottom: 15px;
-    }
-
-    .form-input {
-        height: 35px;
-    }
-
-    .login .btn {
-        height: 32px;
-        font-size: 16px;
-    }
-
-    .login a {
-        font-size: 11px;
-        line-height: 18px;
-    }
-
-    .register-link {
-        font-size: 12px;
-        margin-top: 15px;
-    }
-
-    .register-link p a {
-        font-size: 13px;
-    }
-}
-
-/* Tambahan untuk tata letak responsif pada perangkat laptop (lebar 992px) */
-@media (min-width: 769px) and (max-width: 992px) {
+ @media only screen and (min-width: 769px) and (max-width: 1024px) {
     .login {
         width: 60%;
         padding: 40px;
     }
 
     .login .avatar {
-        width: 70px;
-        height: 70px;
-        top: -15%;
-        left: calc(50% - 35px);
+        width: 90px;
+        height: 90px;
+        top: -12%;
+        left: calc(50% - 45px);
     }
 
     .login h1 {
         font-size: 20px;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
     }
 
     .login input {
-        margin-bottom: 25px;
-    }
-
-    .form-input {
-        height: 40px;
+        margin-bottom: 20px;
     }
 
     .login .btn {
-        height: 35px;
-        font-size: 17px;
-    }
-
-    .login a {
-        font-size: 12px;
-        line-height: 20px;
+        font-size: 16px;
     }
 
     .register-link {
         font-size: 14px;
-        margin-top: 25px;
-    }
-
-    .register-link p a {
-        font-size: 15px;
+        margin-top: 15px;
     }
 }
- 
